Dll_Profit/Exemplo C++/profit.h

typedef struct
{
    wchar_t* ticker;
    wchar_t* bolsa;
    int feed;
} TAssetID;
////////////////////////////////////////////////////////////////////////////////
// WARNING: Não utilizar funções da dll dentro do CALLBACK
////////////////////////////////////////////////////////////////////////////////
//Callback do stado das diferentes conexões
typedef void(__stdcall* TStateCallback)(int nConnStateType, int nResult);
typedef void(__stdcall* TProgressCallBack)(TAssetID assetId,
    int nProgress);
////////////////////////////////////////////////////////////////////////////////
//Callback com informações marketData
typedef void(__stdcall* TNewTradeCallback)(TAssetID assetId,
    wchar_t* date,
    unsigned int nTradeNumber,
    double price, double vol,
    int qtd, int buyAgent, int sellAgent, int tradeType,
    wchar_t bIsEdit);
typedef void(__stdcall* THistoryTradeCallback)(TAssetID assetId,
    wchar_t* date,
    unsigned int nTradeNumber,
    double price, double vol,
    int qtd, int buyAgent, int sellAgent, int tradeType);
typedef void(__stdcall* TNewDailyCallback)(TAssetID TAssetIDRec,
    wchar_t* date,
    double sOpen, double sHigh, double sLow, double sClose, double sVol, double sAjuste, double sMaxLimit, double sMinLimit,
    double sVolBuyer, double sVolSeller, int nQtd, int nNegocios, int nContratosOpen, int nQtdBuyer, int nQtdSeller, int nNegBuyer, int nNegSeller);
////////////////////////////////////////////////////////////////////////////////
//Callback com informações marketData

typedef void(__stdcall* TPriceBookCallback)(TAssetID assetId,
    int nAction, int nPosition, int Side, int nQtd, int nCount,
    double sPrice,
    void* pArraySell, void* pArrayBuy);
typedef void(__stdcall* TOfferBookCallback)(TAssetID assetId,
    int nAction, int nPosition, int Side, int nQtd, int nAgent, __int64 nOfferID,
    double sPrice,
    int bHasPrice, int bHasQtd, int bHasDate, int bHasOfferID, int bHasAgent,
    wchar_t* date,
    void* pArraySell, void* pArrayBuy);
typedef void(__stdcall* TNewTinyBookCallBack)(TAssetID assetId,
    double price,
    int qtd, int side);
typedef int(__stdcall* DLLInitializeMarketLogin)(
    const wchar_t* activationKey,
    const wchar_t* user,
    const wchar_t* password,
    TStateCallback stateCallback,
    TNewTradeCallback newTradeCallback,
    TNewDailyCallback newDailyCallback,
    TPriceBookCallback priceBookCallback,
    TOfferBookCallback offerBookCallback,
    THistoryTradeCallback newHistoryCallback,
    TProgressCallBack progressCallBack,
    TNewTinyBookCallBack newTinyBookCallBack);
typedef int(__stdcall* SubscribeTicker)(const wchar_t* ticker, const wchar_t* bolsa);
typedef int(__stdcall* UnsubscribeTicker)(const wchar_t* ticker, const wchar_t* bolsa);
typedef int(__stdcall* SubscribePriceBook)(const wchar_t* ticker, const wchar_t* bolsa);
typedef int(__stdcall* UnsubscribePriceBook)(const wchar_t* ticker, const wchar_t* bolsa);
typedef int(__stdcall* SubscribeOfferBook)(const wchar_t* ticker, const wchar_t* bolsa);
typedef int(__stdcall* UnsubscribeOfferBook)(const wchar_t* ticker, const wchar_t* bolsa);
typedef struct {
    int day;
    int month;
    int year;
    int hour;
    int min;
    int sec;
    int mili;
} Date;
typedef struct {
    double   price;
    double   volume;
    int      qtd;
    wchar_t* asset;
    Date     date;
} Trade;